# standx_mm_bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  GUIDE.md  Makefile  README.md  TESTING.md  compose.prod.yaml  compose.yaml  pyproject.toml
docs/tutorials/: phase1-1-config-models.md  phase1-2-jwt-auth.md  phase1-3-rest-api-client.md  phase2-2-websocket-client.md  phase3-1-distance-escape.md  phase3-2-order-management.md
scripts/: create_wallet.py  create_wallet_bsc.py  create_wallet_solana.py  integration_test.py  read_api.py
src/standx_mm_bot/: __init__.py  auth.py  config.py  models.py
src/standx_mm_bot/client/: __init__.py  exceptions.py  http.py  websocket.py
src/standx_mm_bot/core/: __init__.py  distance.py  escape.py  order.py
tests/: __init__.py  test_auth.py  test_config.py  test_distance.py  test_escape.py  test_http.py  test_http_integration.py  test_models.py  test_order.py  test_websocket.py  test_websocket_integration.py
